--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,21 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.jason.scarnesdice.MainActivity">
+    android:padding="16dp"
+    android:orientation="horizontal"
+    tools:context="com.example.jason.scarnesdice.MainActivity" >
 
-    <TextView
+    <TextView android:id="@+id/turn"
+        android:textStyle="bold"
+        android:textSize="18sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:text="Player 1 Turn!"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentTop="true" />
 
-    <ImageView
-        android:layout_width=""
-        android:layout_height="" />
+    <TextView android:id="@+id/p1score"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Your score: 0"
+        android:layout_below="@+id/turn" />
+
+    <TextView android:id="@+id/p2score"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Computer score: 0"
+        android:layout_below="@+id/p1score" />
+
+    <TextView android:id="@+id/roundScore"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Round score: 0"
+        android:layout_below="@id/p2score"/>
+
+    <ImageView android:id="@+id/diceImage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/dice1"
+        android:layout_below="@+id/roundScore"
+        android:paddingTop="10dp"
+        android:layout_centerHorizontal="true"/>
+
+    <Button android:id="@+id/holdButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/button_hold"
+        android:onClick="holdButtonPress"
+        android:layout_below="@+id/diceImage"
+        android:layout_centerHorizontal="true"
+        android:layout_margin="32dp" />
+
+    <Button android:id="@+id/rollButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/button_roll"
+        android:onClick="rollButtonPress"
+        android:layout_alignTop="@id/holdButton"
+        android:layout_toLeftOf="@id/holdButton" />
+
+    <Button android:id="@+id/resetButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/button_reset"
+        android:onClick="resetButtonPress"
+        android:layout_alignTop="@+id/holdButton"
+        android:layout_toRightOf="@id/holdButton" />
 </RelativeLayout>
